--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="16dp">
 
+    <!-- Public IP -->
     <TextView
         android:id="@+id/textViewIP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Public IP:"
+        android:text="Public IP: ..."
         android:textSize="18sp"
-        android:padding="10dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
+    <!-- DNS Panel -->
     <TextView
         android:id="@+id/textViewDNS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DNS:"
+        android:text="DNS: ..."
         android:textSize="18sp"
-        android:padding="10dp"/>
+        android:layout_below="@id/textViewIP"
+        android:layout_marginTop="12dp"
+        android:layout_centerHorizontal="true"/>
 
-    <Button
-        android:id="@+id/btnFlushDNS"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Flush DNS"
-        android:padding="15dp"
-        android:layout_marginTop="20dp"/>
+    <!-- Network Indicator -->
+    <ImageView
+        android:id="@+id/networkIndicator"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/textViewDNS"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/red_circle"/>
 
+    <!-- Do All Job Button -->
     <Button
-        android:id="@+id/btnRenewIP"
-        android:layout_width="match_parent"
+        android:id="@+id/btnDoAllJob"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Renew IP + Flush Network"
-        android:padding="15dp"
-        android:layout_marginTop="20dp"/>
-</LinearLayout>
+        android:text="Do All Job"
+        android:layout_below="@id/networkIndicator"
+        android:layout_marginTop="24dp"
+        android:layout_centerHorizontal="true"
+        android:padding="12dp"/>
+
+</RelativeLayout>
