--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/green_circle"
-        android:alpha="0.45"     <!-- 🔥 Opacity adjust here -->
+        android:alpha="0.45"
         android:padding="0dp"
         android:elevation="8dp"/>
 
