--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -3,15 +3,14 @@
     android:layout_width="60dp"
     android:layout_height="60dp">
 
-    <!-- Bubble background (smooth color change dari code) -->
+    <!-- Bubble background -->
     <ImageView
         android:id="@+id/floatingBubble"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/green_circle"
         android:alpha="0.45"
-        android:padding="0dp"
-        android:elevation="8dp"/>
+        android:elevation="8dp" />
 
     <!-- CB TEXT -->
     <TextView
@@ -23,5 +22,6 @@
         android:textStyle="bold"
         android:textColor="#FFFFFF"
         android:gravity="center"
-        android:alpha="0.90"/>
+        android:alpha="0.90" />
+
 </FrameLayout>
